data/derived/comb/progs/unify/prog0893.ml.out
Characters 96-97:
  | (lk, lv)::ls -> if lk = lk then lv else assoc d k ls;;
                                                  ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type
         ('a -> 'b -> 'c) * ('d * ('a -> 'b -> 'c)) list * 'e
